# tempo-server

./: .gitignore  :w  Cargo.toml  LICENSE  README  build.rs  documents.rs
.github/workflows/: build.yaml
.woodpecker/: build.yml  lint.yml
base/: Cargo.toml
base/src/: database.rs  image_format.rs  lib.rs  setting.rs  util.rs
cli/: Cargo.toml
cli/src/: import.rs  list.rs  main.rs  theme.rs
cli/src/fetch/: amazondigital.rs  cover.rs  cover_art_archive.rs  deezer.rs  itunes.rs  mod.rs  music_brainz.rs
cli/src/rank/: convert.rs  cover.rs
common/: Cargo.toml
common/src/: auth.rs  import.rs  internal.rs  lib.rs  track.rs
common/src/fetch/: amazondigital.rs  cover.rs  cover_art_archive.rs  deezer.rs  itunes.rs  mod.rs  music_brainz.rs
common/src/rank/: cover.rs  diff.rs  mod.rs
entity/: Cargo.toml
entity/src/: artist.rs  artist_credit.rs  artist_credit_release.rs  artist_credit_track.rs  artist_picture.rs  artist_relation.rs  artist_release.rs  artist_track.rs  artist_track_relation.rs  artist_url.rs  conflict.rs  full.rs  genre.rs  genre_release.rs  genre_track.rs  genres.rs  image.rs  image_artist.rs  image_release.rs  import.rs  job.rs  lib.rs  map.rs  medium.rs  release.rs  scrobble.rs  task.rs  task_dep_task.rs  track.rs  track_format.rs  update.rs  update_artist.rs  user.rs  user_connection.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000001_init.rs  m20230416_000001_image.rs  m20230511_000001_artist_description.rs  m20230513_000001_artist_relations.rs  m20230513_000001_artist_url.rs  m20230525_000001_user.rs  m20230602_000001_scrobble.rs  m20230602_000002_release_date.rs  m20230607_000001_connection.rs  m20230708_000001_jobs.rs  m20230712_000001_imports.rs  m20231118_000001_update.rs  m20231118_000001_update_artist.rs  m20231126_000001_artist_picture.rs  m20231126_000002_genres.rs  m20231209_000001_release_disambiguation.rs
migrations/: 20220910124957_init.migrate.sql  20220910124957_init.revert.sql  20220910124957_init.sql  20221229142000_artist_group_table.migrate.sql  20221229142000_artist_group_table.revert.sql  20221229142045_artist_credit.migrate.rs  20221229142045_artist_credit.revert.rs  20221229142045_artist_group.migrate.rs
server/: Cargo.toml
server/src/: auth.rs  main.rs  scheduling.rs
server/src/api/: auth.rs  documents.rs  error.rs  extract.rs  jsonapi.rs  loader.rs  mod.rs
server/src/api/aura/: artists.rs  images.rs  mediums.rs  mod.rs  releases.rs  scrobbles.rs  search.rs  tracks.rs
server/src/api/internal/: documents.rs  downloads.rs  import.rs  imports.rs  jobs.rs  list.rs  mod.rs  tasks.rs  update.rs
server/src/api/tempo/: artists.rs  connections.rs  error.rs  genres.rs  images.rs  mediums.rs  mod.rs  provider.rs  releases.rs  scrobbles.rs  search.rs  tracks.rs  users.rs
server/src/aura/: artists.rs  images.rs  mediums.rs  releases.rs  search.rs
server/src/fetch/: deezer.rs  itunes.rs  lastfm.rs  mod.rs  musicbrainz.rs
server/src/import/: files.rs  internal.rs  mod.rs  search_result.rs  track.rs
server/src/internal/: tasks.rs
server/src/search/: db.rs  documents.rs  mod.rs  schema.rs
server/src/tasks/: artist_description.rs  artist_url.rs  index_search.rs  lastfm_artist_image.rs  mod.rs  scrobble.rs
server/src/tasks/import/: fetch.rs  fetch_covers.rs  fetch_release.rs  import.rs  mod.rs  populate.rs  rank_covers.rs  rank_releases.rs  track.rs
server/src/tasks/import/fetch_covers/: cover_art_archive.rs  deezer.rs  itunes.rs  mod.rs
setting/: Cargo.toml
setting/src/: lib.rs
shared/: Cargo.toml
shared/src/: database.rs  lib.rs  setting.rs  util.rs
src/: generated.rs  import.rs  internal.rs  library.rs  list.rs  main.rs  models.rs  rank.rs  settings.rs  theme.rs  track.rs  update.rs  util.rs
src/album/: mod.rs
src/fetch/: amazondigital.rs  cover.rs  cover_art_archive.rs  deezer.rs  itunes.rs  mod.rs  music_brainz.rs  structures.rs
src/fetch/musicbrainz/: mod.rs  structures.rs
src/models/: mod.rs
src/rank/: convert.rs  cover.rs  diff.rs  internal.rs  mod.rs  rank.rs
src/tag/: ape.rs  flac.rs  format.rs  id3.rs  m4a.rs  mod.rs  mp4.rs  picture.rs
src/track/: ape.rs  file.rs  flac.rs  format.rs  id3.rs  key.rs  map.rs  mod.rs  mp4.rs  picture.rs
tag/: Cargo.toml
tag/src/: file.rs  flac.rs  format.rs  id3.rs  lib.rs  map.rs  picture.rs
web/: Cargo.toml
web/src/: auth.rs  documents.rs  jsonapi.rs  lib.rs  main.rs  response.rs  scheduling.rs
web/src/aura/: artist_credits.rs  artists.rs  documents.rs  images.rs  mediums.rs  mod.rs  releases.rs  search.rs  tracks.rs
web/src/fetch/: musicbrainz.rs
web/src/internal/: import.rs  library.rs  list.rs  mod.rs
web/src/search/: db.rs  documents.rs  mod.rs  schema.rs
web/src/tasks/: artist_description.rs  artist_relations.rs  artist_url.rs  index_search.rs  lastfm_artist_image.rs  mod.rs
