[package]
name = "tagger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2"
directories = "4.0"
toml = "0.5"
eyre = "0.6"
color-eyre = "0.6"
scan_dir = "0.3"
phf = { version = "0.11", features = ["macros"] }
const_format = "0.2"
levenshtein = "1.0"
log = "0.4"
env_logger = "0.9"
infer = "0.9"
pathfinding = "0.7"
sqlx = { version = "0.6.1", features = ["sqlite","runtime-tokio-native-tls"] }

inquire = "0.3.0"
metaflac = "0.2"
mp4ameta = "0.11"
id3 = "1.3"
ape = { git = "https://github.com/lucat1/rust-ape" }
# ape = "0.4"

async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["rc"] }
serde_derive = { version = "1.0" }
async-once-cell = "0.4"
lazy_static = "1.4.0"
indicatif = "0.17.0"
