[package]
name = "tagger"
version = "0.1.0"
edition = "2021"

[features]
default = ["flac","id3"]
ape = []
flac = []
id3 = []
mp4 = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2"
directories = "4.0"
toml = "0.5"
eyre = "0.6"
color-eyre = "0.6"
scan_dir = "0.3"
const_format = "0.2"
levenshtein = "1.0"
log = "0.4"
env_logger = "0.9"
infer = "0.9"
pathfinding = "0.7"
image = "0.24.3"
async-once-cell = "0.4"
lazy_static = "1.4.0"
indicatif = "0.17.0"
dialoguer = "0.10.2"
chrono = "0.4.22"
smart-default = "0.6.0"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["rc"] }
itertools = "0.10.4"
serde_derive = { version = "1.0" }
sqlx = { version = "0.6.1", features = ["sqlite","runtime-tokio-native-tls", "chrono"] }

metaflac = "0.2"
mp4ameta = "0.11"
id3 = "1.3"
ape = { git = "https://github.com/lucat1/rust-ape" }
mime = "0.3.16"
serde_json = "1.0.85"
regex = "1.6.0"
strfmt = "0.2.2"
# ape = "0.4"
