[package]
name = "base"
version = "0.1.0"
edition = "2021"
publish = false
license = "AGPL-3.0-or-later"

[dependencies]
async-once-cell = "0.4.2"
directories = "4.0.1"
eyre = "0.6.8"
image = "0.24.5"
lazy_static = "1.4.0"
mime = "0.3.16"
serde = "1.0.152"
serde_derive = "1.0.152"
toml = "0.7.1"
sea-orm = { version = "0.11", features = [ "runtime-tokio-rustls", "macros", "with-time", "debug-print" ] }
sea-orm-migration = "0.11"
scan_dir = "0.3.3"
tracing = "0.1.37"
num_cpus = "1.15.0"
rand = "0.8.5"
iref = { version = "2.2.3", features = ["serde"] }
time = { version = "0.3.21", features = ["parsing"] }
url = "2.4.0"
thiserror = "1.0.50"
