[package]
name = "common"
version = "0.1.0"
edition = "2021"
publish = false
license = "AGPL-3.0-or-later"

[features]
default = ["flac", "id3"]
ape = ["tag/ape"]
flac = ["tag/flac"]
id3 = ["tag/id3"]
mp4 = ["tag/mp4"]

[dependencies]
base = { path = "../base" }
entity = { path = "../entity" }
tag = { path = "../tag" }

async-once-cell = "0.4.2"
chrono = "0.4.22"
directories = "4.0.1"
eyre = "0.6.8"
image = "0.24.5"
lazy_static = "1.4.0"
log = "0.4.17"
mime = "0.3.16"
serde = "1.0.152"
serde_derive = "1.0.152"
toml = "0.7.1"
sea-orm = { version = "0.11", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-time" ] }
sea-orm-migration = "0.11"
scan_dir = "0.3.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "gzip"], default-features = false }
scraper = "0.14.0"
itertools = "0.10.5"
uuid = "1.3.0"
const_format = "0.2.30"
strum = "0.24.1"
strum_macros = "0.24.3"
serde_json = "1.0.93"
serde_path_to_error = "0.1.9"
pathfinding = "0.7"
levenshtein = "1.0.5"
tokio = "1.26.0"
strfmt = "0.2.4"
rayon = "1.7.0"
sha256 = "1.1.2"
