[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
setting = { path = "../setting" }

chrono = "0.4.23"
eyre = "0.6.8"
infer = "0.12.0"
sea-orm = { version = "^0", features = [ "with-time" ] }
sea-query = "0.28.2"
serde = "1.0.152"
serde_json = "1.0.91"
uuid = "1.2.2"
