[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false
license = "AGPL-3.0-or-later"

[dependencies]
base = { path = "../base" }

eyre = "0.6.8"
infer = "0.12.0"
sea-orm = { version = "0.11", features = [ "with-time", "debug-print" ] }
sea-query = "0.28.2"
serde = "1.0.152"
serde_json = "1.0.91"
uuid = "1.2.2"
lazy_static = "1.4.0"
mime = "0.3.17"
time = { version = "0.3.21", features = ["serde"] }
