[package]
name = "migration"
version = "0.2.0"
edition = "2021"
publish = false
license = "AGPL-3.0-or-later"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }
base = { path = "../base" }
async-std = { version = "^1", features = ["attributes", "tokio1"] }
time = "0.3.21"
uuid = "1.3.3"
serde_json = "1.0.108"
sha256 = "1.4.0"

[dependencies.sea-orm-migration]
version = "0.11"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  # "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  # "sqlx-postgres",         # `DATABASE_DRIVER` feature
]
