[package]
name = "tag"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["flac"]
ape = ["dep:ape"]
flac = ["dep:metaflac"]
id3 = ["dep:id3"]
mp4 = ["dep:mp4ameta"]

[dependencies]
base = { path = "../base" }
entity = { path = "../entity" }

chrono = "0.4.23"
eyre = "0.6.8"
itertools = "0.10.5"
mime = "0.3.16"
log = "0.4.17"

metaflac = { version = "0.2", optional = true }
mp4ameta = { version = "0.11", optional = true }
id3 = { version = "1.3", optional = true}
ape = { git = "https://github.com/lucat1/rust-ape", optional = true }
infer = "0.12.0"
