[package]
name = "tag"
version = "0.2.0"
edition = "2021"
publish = false
license = "AGPL-3.0-or-later"

[features]
default = ["flac"]
ape = ["dep:ape"]
flac = ["dep:metaflac"]
id3 = ["dep:id3"]
mp4 = ["dep:mp4ameta"]

[dependencies]
base = { path = "../base" }
entity = { path = "../entity" }

eyre = "0.6.8"
itertools = "0.10.5"
mime = "0.3.16"

metaflac = { version = "0.2", optional = true }
mp4ameta = { version = "0.11", optional = true }
id3 = { version = "1.3", optional = true}
ape = { git = "https://github.com/lucat1/rust-ape", optional = true }
infer = "0.12.0"
tracing = "0.1.37"
strfmt = "0.2.4"
