[package]
name = "web"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["flac", "id3"]
ape = ["tag/ape"]
flac = ["tag/flac"]
id3 = ["tag/id3"]
mp4 = ["tag/mp4"]

[dependencies]
shared = { path = "../shared" }
entity = { path = "../entity" }
tag = { path = "../tag" }
migration = { path = "../migration" }

clap = "3.2"
eyre = "0.6"
color-eyre = "0.6"
scan_dir = "0.3"
const_format = "0.2"
levenshtein = "1.0"
log = "0.4"
env_logger = "0.9"
pathfinding = "0.7"
image = "0.24.3"
async-once-cell = "0.4"
lazy_static = "1.4.0"
indicatif = "0.17.0"
dialoguer = "0.10.2"
chrono = "0.4.22"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "gzip"], default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["rc"] }
itertools = "0.10.4"
serde_derive = { version = "1.0" }
sea-orm = { version = "0.11", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-time" ] }

mime = "0.3.16"
serde_json = "1.0.85"
regex = "1.6.0"
strfmt = "0.2.2"
serde_path_to_error = "0.1.8"
uuid = { version = "1.2.2", features = ["v4"] }
sea-orm-migration = "0.11"
rayon = "1.6.1"
text-diff = "0.4.0"
scraper = "0.14.0"
strum = "0.24.1"
strum_macros = "0.24.3"
axum = "0.6.7"
# ape = "0.4"
