[package]
name = "web"
version = "0.1.0"
edition = "2021"
publish = false
license = "AGPL-3.0-or-later"

[features]
default = ["flac", "id3"]
ape = ["tag/ape"]
flac = ["tag/flac"]
id3 = ["tag/id3"]
mp4 = ["tag/mp4"]

[dependencies]
base = { path = "../base" }
common = { path = "../common" }
entity = { path = "../entity" }
tag = { path = "../tag" }
migration = { path = "../migration" }

clap = { version = "4", features = ["derive"] }
eyre = "0.6"
color-eyre = "0.6"
scan_dir = "0.3"
const_format = "0.2"
levenshtein = "1.0"
env_logger = "0.9"
pathfinding = "0.7"
image = "0.24.3"
async-once-cell = "0.4"
lazy_static = "1.4.0"
indicatif = "0.17.0"
dialoguer = "0.10.2"
chrono = "0.4.22"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "gzip", "stream"], default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["rc"] }
itertools = "0.10.4"
serde_derive = { version = "1.0" }
sea-orm = { version = "0.11", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-time", "debug-print" ] }

mime = "0.3.16"
serde_json = "1.0.85"
regex = "1.6.0"
strfmt = "0.2.2"
serde_path_to_error = "0.1.8"
uuid = { version = "1.2.2", features = ["v4"] }
sea-orm-migration = "0.11"
rayon = "1.6.1"
text-diff = "0.4.0"
scraper = "0.14.0"
strum = "0.24.1"
strum_macros = "0.24.3"
axum = "0.6"
axum-server = { version = "0.4.7", features = [ "tls-rustls" ] }
bytes = "1.4.0"
axum-macros = "0.3.4"
fs_extra = "1.3.0"
tower-http = { version = "0.4.0", features = ["cors", "fs", "trace"] }
tower = "0.4.13"
serde_qs = "0.12.0"
tracing-subscriber = "0.3"
tracing = "0.1"
deadqueue = "0.2.4"
tokio-cron-scheduler = "0.9.4"
governor = "0.5.1"
nonzero_ext = "0.3.0"
url = { version = "2.3.1", features = ["serde"] }
serde-enum-str = "0.3.2"
infer = "0.13.0"
sha256 = "1.1.3"
serde_valid = "0.16.1"
